# blockbuster

./: .travis.yml  README.md  meson.build
common/: AppConfig.vala  PluginSettings.vala
data/: application.css  com.github.donadigo.blockbuster.appdata.xml  com.github.donadigo.blockbuster.desktop  com.github.donadigo.blockbuster.gresource.xml  com.github.donadigo.blockbuster.gschema.xml  meson.build
data/icons/: icons.gresource.xml
debian/: control  copyright  rules
meson/: post_install.py
plugin/: Interfaces.vala  Main.vala  Utils.vala  WindowMovementTracker.vala
src/: AppChooser.vala  AppChooserRow.vala  AppRow.vala  Application.vala  BehaviourView.vala  ConfigurationView.vala  IconContainer.vala  MainWindow.vala  SettingRow.vala  WorkspaceBox.vala  WorkspaceButton.vala  WorkspaceView.vala  config.vala.in
vapi/: libmutter.vapi
